infra/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.gewis.nl`)
      middlewares:
        - name: longhorn-auth
      services:
        - name: longhorn-frontend
          port: 80
